Iterator used instead of collect

--- a/DataPull.ipynb
+++ b/DataPull.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,27 +156,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+\n",
+      "|country|\n",
+      "+-------+\n",
+      "|     AU|\n",
+      "|    USA|\n",
+      "|   PHIL|\n",
+      "|    IND|\n",
+      "|    NYC|\n",
+      "+-------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "rdd=country.rdd.map(lambda x: \n",
-    "    (x[0])\n",
-    "    )"
+    "country.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "asdf = rdd.collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,14 +233,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for tab in asdf:\n",
-    "    tablename = \"staging.customer_vaccination_\" + tab \n",
+    "iterator = country.rdd.toLocalIterator()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for tab in iterator:\n",
+    "    tablename = \"staging.customer_vaccination_\" + tab[\"country\"]\n",
     "    dropCreateTable(schema, tablename)\n",
-    "    populateData(\"proc_data_sql\", tab, tablename)"
+    "    populateData(\"proc_data_sql\", tab[\"country\"], tablename)"
    ]
   }
  ],
